--- a/.htaccess
+++ b/.htaccess
@@ -88,6 +88,7 @@ DirectoryIndex index.php index.html index.htm
   # uncomment the following:
   RewriteCond %{HTTP_HOST} .
   RewriteCond %{HTTP_HOST} !^www\. [NC]
+	RewriteCond %{HTTP_HOST} !^biz\. [NC]
   RewriteRule ^ http%{ENV:protossl}://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
   
   # To redirect all users to access the site WITHOUT the 'www.' prefix,
